# AudioAnalyzer

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  AudioAnalyzer.sln  Directory.Build.props  LICENSE  NOTICE  README.md
.cursor/: mcp.json
.cursor/rules/: adr.mdc  csharp-standards.mdc  documentation.mdc  no-empty-catch.mdc  one-file-per-class.mdc  static-analysis.mdc  ui-specs.mdc  visualizer-specs.mdc  visualizers-viewport.mdc  xml-documentation.mdc
.github/: copilot-instructions.md
.github/workflows/: build.yml
AudioAnalyzer/: AudioAnalyzer.cs  AudioAnalyzer.csproj  AudioAnalyzer.sln  Program.cs  Settings.cs  appsettings.json
docs/: configuration-reference.md  getting-started.md  product-audience.md  ui-components.md  ui-spec-application-modes.md  ui-spec-device-selection-modal.md  ui-spec-format.md  ui-spec-fullscreen-visualizer.md  ui-spec-general-settings-hub.md  ui-spec-layer-render-bounds.md  ui-spec-main-view-example.md  ui-spec-menu-selection.md  ui-spec-preset-editor-mode.md  ui-spec-preset-settings-modal.md  ui-spec-settings-surfaces.md  ui-spec-show-play-mode.md  ui-spec-title-breadcrumb.md  ui-spec-toolbar.md
docs/adr/: 0000-template.md  0001-automatic-save.md  0002-per-visualizer-settings-and-color-palette.md  0003-24bit-palettes-and-cycling.md  0004-compliance-audit.md  0004-visualizer-encapsulation.md  0005-layered-visualizer-cell-buffer.md  0006-modal-system.md  0007-visualizer-subfolder-structure.md  0008-visualizer-settings-di.md  0009-per-visualizer-palette.md  0011-no-empty-catch-blocks.md  (+86 more)
native/: README.md
native/audio-tap-shim/: CMakeLists.txt  audio_tap_shim.h  audio_tap_shim.mm
native/link-shim/: CMakeLists.txt  link_shim.cpp
native/video-capture-shim/: CMakeLists.txt  video_capture_shim.h  video_capture_shim.mm
scripts/: Summarize-TrxTestDurations.ps1
specs/: TEMPLATE.md
tasks/: PBI-000.md  PBI-001-fractal-illusory-infinite-zoom.md  PBI-002-fractal-readability-defaults.md  PBI-003-fractal-readability-followups.md  PBI-004-preset-editor-navigation.md  PBI-005-preset-editor-insert-delete-canvas.md  PBI-006-layer-picker-from-s-modal.md  PBI-007-delete-preset.md  PBI-008-concurrent-process-log-paths.md  PBI-009-reset-bpm-audio-stale-capture.md  PBI-010-reset-bpm-beatcount-beat-marks.md  PBI-011-geiss-color-drift-speed.md  PBI-012-macos-platform-foundation.md  PBI-013-macos-audio-input.md  PBI-014-macos-operator-docs-console-parity.md  PBI-015-macos-windows-host-only-tfms.md  PBI-016-macos-screencapturekit-system-audio.md  PBI-017-confirm-before-quit.md  PBI-018-macos-now-playing.md  PBI-019-feature-capability-report.md
(+888 files in other folders)
